# unwrapped

./: .gitignore  Cargo.toml  README.md  go.work  go.work.sum  justfile
.github/workflows/: build.yml
api/: Cargo.toml  api.go  config.go  go.mod  justfile  logger.go  router.go  server.go
api/assets/: index.html
api/src/: main.rs
api/src/routes/: collect.rs  mod.rs  save_recent_tracks.rs
api/src/routes/auth/: mod.rs
entity/: Cargo.toml
entity/src/entities/: account.rs  album.rs  album_artist.rs  album_track.rs  artist.rs  mod.rs  play_log.rs  prelude.rs  recent_track.rs  track.rs  user.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/db/: mod.rs  spotify.rs  user.rs
lib/src/music/: spotify.rs
lib/src/music/spotify/: client.rs  mod.rs  vendor.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_init.rs  m20240813_164238_init_artists.rs  m20240813_170813_init_albums.rs  m20240813_170819_init_tracks.rs  m20240813_170827_init_playlog.rs  m20240820_031732_init_users.rs  m20240820_031738_init_accounts.rs
src/: assets.rs  main.rs  routes.rs
src/db/: mod.rs  spotify.rs  user.rs
src/music/: spotify.rs
src/routes/: collect.rs  mod.rs
src/routes/auth/: mod.rs
tauri-app/: index.html  justfile  package-lock.json  package.json  tailwind.config.js
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: ActionList.tsx  Button.tsx  Footer.tsx  Header.tsx  Logo.tsx  ThemeToggle.tsx
web/: package-lock.json  package.json  tailwind.config.ts  theme.ts
web/src/: app.css  app.html
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/login/: +page.server.ts  +page.svelte
