[workspace]
members = [".", "entity", "migration"]
resolver = "2"

[package]
name = "unwrapped"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
axum = { version = "0.7", features = ["tracing"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
tokio-util = { version = "0.6", features = ["io"] }
serde = "1.0.204"
serde_json = "1.0.122"
surf = "2.3.2"
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
base64 = "0.22.1"
