[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
tokio-util = { version = "0.6", features = ["io"] }
serde = "1.0.204"
serde_json = "1.0.122"
surf = "2.3.2"
base64 = "0.22.1"
migration = { path = "../migration" }
entity = { path = "../entity" }
lib = { path = "../lib" }
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
